@@ -54,6 +54,7 @@
  Other changes:
 
    - my_double_round_to_decimals(): new function.
+   - RecurrentModelManagement: change columns header (todo #1141).
    - RecurrentOperations: set the icon slightly smaller (todo #1138).
 
 -----------------------------------------------------------------------
